Change overflow property from hidden to auto

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             padding: 10px; /* Reduced body padding for mobile screens */
             color: var(--color-snow);
             position: relative;
-            overflow: hidden; 
+            overflow: auto; 
         }
 
         /* Snowflake animation */
