--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     
     <!-- FIX FOR iOS: Explicitly define Apple touch icons for reliable "Add to Home Screen" -->
     <!-- ACTION REQUIRED: Replace '/app_icon.png' with the actual path to your 180x180 PNG file. -->
-    <link rel="apple-touch-icon" href="/app_icon.png"> 
-    <link rel="apple-touch-icon" sizes="152x152" href="/app_icon.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="/app_icon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/app_icon.png">
+    <link rel="apple-touch-icon" href="./app_icon.png"> 
+    <link rel="apple-touch-icon" sizes="152x152" href="./app_icon.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="./app_icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./app_icon.png">
     
     <!-- Load Tailwind CSS --><script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Charmonman:wght@400;700&display=swap" rel="stylesheet">
