--- a/index.html
+++ b/index.html
@@ -15,45 +15,52 @@
 
         body {
             font-family: 'Georgia', serif;
-            background: linear-gradient(135deg, #ffeef8 0%, #ffe0f0 50%, #ffd4e5 100%);
+            /* Darker, moodier background: Deep Wine to Soft Rose */
+            background: linear-gradient(135deg, #1a0507 0%, #4a0e0e 50%, #800f2f 100%);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             padding: 20px;
             background-attachment: fixed;
+            color: #f8edeb; /* Soft cream text */
         }
 
         .header {
             text-align: center;
             margin-bottom: 40px;
-            animation: fadeIn 1s ease-in;
+            animation: fadeIn 1.2s ease-in;
         }
 
         .header h1 {
             font-size: 3em;
-            color: #c9184a;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+            /* Gold Gradient for the title */
+            background: linear-gradient(to bottom, #f5e1a4 0%, #c9b07a 50%, #a67c00 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 0px 4px 10px rgba(0,0,0,0.5);
             margin-bottom: 10px;
             font-weight: 700;
+            letter-spacing: 1px;
         }
 
         .header p {
-            font-size: 1.3em;
-            color: #ff4d6d;
+            font-size: 1.4em;
+            color: #ffb3c1; /* Soft rose */
             font-style: italic;
+            opacity: 0.9;
         }
 
         .hearts-decoration {
             font-size: 2em;
             margin: 20px 0;
-            animation: heartBeat 2s ease-in-out infinite;
+            filter: drop-shadow(0 0 10px #c9184a);
+            animation: heartBeat 2.5s ease-in-out infinite;
         }
 
         @keyframes heartBeat {
-            0%, 100% { transform: scale(1); }
-            25% { transform: scale(1.1); }
-            50% { transform: scale(1); }
+            0%, 100% { transform: scale(1); opacity: 0.8; }
+            50% { transform: scale(1.15); opacity: 1; }
         }
 
         @keyframes fadeIn {
@@ -71,12 +78,15 @@
         }
 
         .month-card {
-            background: white;
+            /* Darker card background for a "lustful" velvet feel */
+            background: rgba(45, 11, 14, 0.9);
             border-radius: 20px;
             padding: 30px;
-            box-shadow: 0 8px 20px rgba(201, 24, 74, 0.15);
+            /* Gold border */
+            border: 2px solid #c9b07a;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             text-decoration: none;
             color: inherit;
             display: block;
@@ -84,80 +94,76 @@
             overflow: hidden;
         }
 
-        .month-card::before {
+        /* The "Sweets" glow on hover */
+        .month-card::after {
             content: '';
             position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(255, 192, 203, 0.3) 0%, transparent 70%);
-            transform: scale(0);
-            transition: transform 0.5s ease;
-        }
-
-        .month-card:hover::before {
-            transform: scale(1);
+            inset: 0;
+            background: radial-gradient(circle at center, rgba(201, 176, 122, 0.15) 0%, transparent 70%);
+            opacity: 0;
+            transition: opacity 0.4s;
         }
 
         .month-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 12px 30px rgba(201, 24, 74, 0.25);
+            transform: translateY(-8px) scale(1.02);
+            box-shadow: 0 15px 40px rgba(201, 176, 122, 0.2);
+            border-color: #f5e1a4;
+        }
+
+        .month-card:hover::after {
+            opacity: 1;
         }
 
         .month-card h2 {
-            font-size: 2em;
-            color: #c9184a;
+            font-size: 1.8em;
+            color: #f5e1a4; /* Champagne gold */
             margin-bottom: 10px;
-            position: relative;
-            z-index: 1;
+            font-family: 'Times New Roman', serif;
         }
 
         .month-card .month-emoji {
             font-size: 3em;
             margin-bottom: 15px;
             display: block;
+            filter: drop-shadow(0 0 5px rgba(245, 225, 164, 0.4));
         }
 
         .month-card p {
-            color: #666;
+            color: #ffb3c1;
             font-size: 1.1em;
-            position: relative;
-            z-index: 1;
+            opacity: 0.8;
         }
 
         .footer {
             margin-top: auto;
-            padding: 20px;
+            padding: 30px;
             text-align: center;
-            color: #c9184a;
+            color: #c9b07a;
             font-style: italic;
+            border-top: 1px solid rgba(201, 176, 122, 0.2);
+            width: 80%;
         }
 
         .date-range {
-            background: rgba(255, 255, 255, 0.7);
+            background: rgba(128, 15, 47, 0.3);
             padding: 15px 30px;
-            border-radius: 15px;
+            border-radius: 50px;
             margin-bottom: 30px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            border: 1px solid rgba(201, 176, 122, 0.4);
+            box-shadow: inset 0 0 15px rgba(0,0,0,0.3);
         }
 
         .date-range p {
-            color: #c9184a;
+            color: #f5e1a4;
             font-size: 1.2em;
             font-weight: 600;
+            letter-spacing: 2px;
+            text-transform: uppercase;
         }
 
         @media (max-width: 768px) {
-            .header h1 {
-                font-size: 2em;
-            }
-            .header p {
-                font-size: 1.1em;
-            }
-            .months-container {
-                grid-template-columns: 1fr;
-            }
+            .header h1 { font-size: 2.2em; }
+            .months-container { grid-template-columns: 1fr; }
         }
     </style>
 </head>
