Update February name in monthsConfig

--- a/month.html
+++ b/month.html
@@ -215,7 +215,7 @@
 
     <script>
         const monthsConfig = {
-            1: { name: 'February 2026', emoji: '💝', startDay: 1, endDay: 15 },
+            1: { name: 'February', emoji: '💝', startDay: 1, endDay: 15 },
             2: { name: 'March', emoji: '🌸', startDay: 16, endDay: 46 },
             3: { name: 'April', emoji: '🌷', startDay: 47, endDay: 76 },
             4: { name: 'May', emoji: '🌹', startDay: 77, endDay: 107 },
