--- a/index.html
+++ b/index.html
@@ -146,33 +146,46 @@
 
         .date-range {
             background: rgba(128, 15, 47, 0.3);
-            padding: 12px 20px; /* Reduced side padding for mobile */
-            border-radius: 50px;
+            padding: 15px 30px;
+            border-radius: 50px; /* This will adjust automatically on mobile */
             margin-bottom: 30px;
             border: 1px solid rgba(201, 176, 122, 0.4);
             box-shadow: inset 0 0 15px rgba(0,0,0,0.3);
-            max-width: 90%; /* Prevents it from hitting the screen edges */
-            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: fit-content;
+            max-width: 90%;
         }
 
         .date-range p {
             color: #f5e1a4;
-            font-size: 1.1em; /* Slightly smaller base size */
+            font-size: 1.2em;
             font-weight: 600;
-            letter-spacing: 1px; /* Reduced letter spacing for better fit */
+            letter-spacing: 2px;
             text-transform: uppercase;
-            line-height: 1.4;
+            display: flex;
+            align-items: center;
+            gap: 10px;
         }
 
-        /* Specific Mobile Fix */
-        @media (max-width: 480px) {
-            .date-range p {
-                font-size: 0.9em; /* Shrink text on small iPhones */
-                letter-spacing: 0.5px;
-            }
+        /* Mobile Stacked Logic */
+        @media (max-width: 600px) {
             .date-range {
-                border-radius: 20px; /* Less aggressive curve looks better with wrapped text */
-                padding: 10px 15px;
+                border-radius: 20px; /* Square off the bubble slightly for the stack */
+                padding: 15px;
+            }
+
+            .date-range p {
+                flex-direction: column; /* Stacks the spans vertically */
+                font-size: 1em;
+                letter-spacing: 1px;
+                gap: 5px;
+            }
+
+            .date-divider {
+                transform: rotate(0deg); /* Keeps the dash horizontal */
+                margin: -5px 0; /* Tightens the spacing around the dash */
             }
         }
     </style>
@@ -185,7 +198,11 @@
     </div>
 
     <div class="date-range">
-        <p>February 14, 2026 - February 13, 2027</p>
+        <p>
+            <span class="date-text">February 14, 2026</span>
+            <span class="date-divider">—</span>
+            <span class="date-text">February 13, 2027</span>
+        </p>
     </div>
 
     <div class="months-container">
