Update viewport meta tag for better display

--- a/month.html
+++ b/month.html
@@ -3,7 +3,7 @@
 <head>
     <script src="./calendar_data.js"></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>🌹 365 Days of Love 🌹</title>
     <style>
         * {
