--- a/month.html
+++ b/month.html
@@ -4,6 +4,7 @@
     <script src="./calendar_data.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="theme-color" content="#1a0507">
     <title>🌹 365 Days of Love 🌹</title>
     <style>
         * {
