Set min-height for body to 100vh
Added min-height to body for full viewport height.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             padding: 20px;
             background-attachment: fixed;
             color: #f8edeb; /* Soft cream text */
+            background-attachment: fixed;
+            min-height: 100vh;
         }
 
         .header {
