--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             text-align: center;
             margin-bottom: 40px;
             animation: fadeIn 1.2s ease-in;
+            padding-top: calc(20px + env(safe-area-inset-top)); 
+            margin-bottom: 40px;
         }
 
         .header h1 {
