--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
         .header h1 {
             font-size: 2.8em;
-            /* Gold Gradient Title */
-            background: linear-gradient(to bottom, #f5e1a4 0%, #c9b07a 50%, #a67c00 100%);
+            /* DEEP ROSE GOLD METALLIC GRADIENT */
+            background: linear-gradient(to bottom, #ffb3c1 0%, #a44a5f 50%, #5e1d2c 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            /* Shadow makes gold pop on light pink background */
-            filter: drop-shadow(2px 2px 3px rgba(74, 14, 14, 0.4));
-            font-weight: 700;
+            /* Subtle glow to make it look metallic */
+            filter: drop-shadow(2px 2px 4px rgba(128, 15, 47, 0.3));
+            font-weight: 800;
             letter-spacing: 1px;
             line-height: 1.2;
         }
