Change header background gradient colors

--- a/month.html
+++ b/month.html
@@ -63,7 +63,7 @@
 
         .header h1 {
             font-size: 2.8em;
-            background: linear-gradient(to bottom, #f5e1a4 0%, #c9b07a 50%, #a67c00 100%);
+            background: linear-gradient(to bottom, #ffb3c1 0%, #a44a5f 50%, #5e1d2c 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             /* Shadow for gold text readability on pink */
