Add month cards for May to February 2027

--- a/index.html
+++ b/index.html
@@ -222,17 +222,79 @@
             <h2>February 2026</h2>
             <p>Days 1-15 | The Journey Begins</p>
         </a>
+
         <a href="month.html?month=2" class="month-card">
             <span class="month-emoji">🌸</span>
             <h2>March</h2>
             <p>Days 16-46 | Spring Blooms</p>
         </a>
+
         <a href="month.html?month=3" class="month-card">
             <span class="month-emoji">🌷</span>
             <h2>April</h2>
             <p>Days 47-76 | Affection</p>
         </a>
-        </div>
+
+        <a href="month.html?month=4" class="month-card">
+            <span class="month-emoji">🌹</span>
+            <h2>May</h2>
+            <p>Days 77-107 | Devotion</p>
+        </a>
+
+        <a href="month.html?month=5" class="month-card">
+            <span class="month-emoji">☀️</span>
+            <h2>June</h2>
+            <p>Days 108-137 | Summer Shine</p>
+        </a>
+
+        <a href="month.html?month=6" class="month-card">
+            <span class="month-emoji">🌺</span>
+            <h2>July</h2>
+            <p>Days 138-168 | Warm Hearts</p>
+        </a>
+
+        <a href="month.html?month=7" class="month-card">
+            <span class="month-emoji">🌻</span>
+            <h2>August</h2>
+            <p>Days 169-199 | Golden Moments</p>
+        </a>
+
+        <a href="month.html?month=8" class="month-card">
+            <span class="month-emoji">🍂</span>
+            <h2>September</h2>
+            <p>Days 200-229 | Falling for You</p>
+        </a>
+
+        <a href="month.html?month=9" class="month-card">
+            <span class="month-emoji">🎃</span>
+            <h2>October</h2>
+            <p>Days 230-260 | Cozy Autumn</p>
+        </a>
+
+        <a href="month.html?month=10" class="month-card">
+            <span class="month-emoji">🍁</span>
+            <h2>November</h2>
+            <p>Days 261-290 | Grateful</p>
+        </a>
+
+        <a href="month.html?month=11" class="month-card">
+            <span class="month-emoji">❄️</span>
+            <h2>December</h2>
+            <p>Days 291-321 | Winter Warmth</p>
+        </a>
+
+        <a href="month.html?month=12" class="month-card">
+            <span class="month-emoji">🎊</span>
+            <h2>January 2027</h2>
+            <p>Days 322-352 | New Year</p>
+        </a>
+
+        <a href="month.html?month=13" class="month-card">
+            <span class="month-emoji">💖</span>
+            <h2>February 2027</h2>
+            <p>Days 353-365 | Full Circle</p>
+        </a>
+    </div>
 
     <div class="footer">
         <p>💕 Made with endless love for Isabella 💕</p>
