--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             align-items: center;
             text-align: center;
             width: 100%;
-            padding-top: calc(160px + env(safe-area-inset-top));
+            padding-top: calc(20vh + env(safe-area-inset-top));
             padding-left: 20px;
             padding-right: 20px;
             margin-bottom: 50px;
