--- a/staging/month.html
+++ b/staging/month.html
@@ -18,10 +18,6 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background-image: url('assets/background.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -29,6 +25,19 @@
             padding: 20px;
             padding-top: env(safe-area-inset-top);
             color: #4a0e0e;
+        }
+
+        .bg-fixed {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            z-index: -1; /* Puts it behind everything */
+            background-image: url('assets/background.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
         .back-button {
