--- a/staging/index.html
+++ b/staging/index.html
@@ -72,12 +72,14 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-bottom: 1em
+            padding-bottom: 10px;
         }
 
         .header h1 {
             font-size: clamp(2.2rem, 8vw, 3.5rem);
             font-weight: 800;
-            line-height: 0.95;
+            line-height: 1.1;
             letter-spacing: -0.04em;
             background: linear-gradient(to bottom, #ffb3c1 0%, #a44a5f 50%, #5e1d2c 100%);
             -webkit-background-clip: text;
