--- a/month.html
+++ b/month.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="./calendar_data.js"></script>
+    <script src="assets/calendar_data.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>🌹 365 Days of Love 🌹</title>
