--- a/staging/month.html
+++ b/staging/month.html
@@ -217,6 +217,7 @@
     </style>
 </head>
 <body>
+    <div class="bg-fixed"></div>
     <a href="index.html" class="back-button">← Back</a>
     
     <div class="header">
